# astro-manager

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: build.yml
docs/: FIRMWARE_RESEARCH.md
packaging/: 60-astro-manager.rules  PKGBUILD  astro-manager.service  io.github.drlolwat.AstroManager.desktop  io.github.drlolwat.AstroManager.service  io.github.drlolwat.AstroSpatial-autostart.desktop  io.github.drlolwat.AstroSpatial.desktop
src/: CMakeLists.txt  a50device.cpp  a50device.h  a50manager.cpp  a50manager.h  a50protocol.cpp  a50protocol.h  appcontroller.cpp  appcontroller.h  main.cpp  managerctl.cpp  pipewiremonitor.cpp  pipewiremonitor.h  profilegenerator.cpp  profilegenerator.h  profilestore.cpp  profilestore.h  systemdmanager.cpp  systemdmanager.h  types.h
src/qml/: DashboardPage.qml  DiagnosticsPage.qml  HardwareEqPage.qml  LevelRow.qml  Main.qml  MicrophonePage.qml  ProfilesPage.qml  SpatialPage.qml  StreamPage.qml
tests/: CMakeLists.txt  a50dump.cpp  a50protocol_test.cpp  configdump.cpp  pipewiremonitor_smoke.cpp  profilegenerator_test.cpp  profilestore_test.cpp
